--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Deploy Worker
-
 on:
   repository_dispatch:
 
@@ -19,18 +18,16 @@ jobs:
         cache: "npm"
 
     - name: Install modules
-      run: npm install wrangler@latest
+      run: npm i wrangler@latest
 
     - name: Build
       run: npx wrangler build
 
     - name: Add Header
-      run: |
-        cp ${{ github.workspace }}/dist/worker.js ${{ github.workspace }}/dist/worker-original.js
-        echo -e "/*!\n  * v2ray Subscription Worker (${{ github.sha }})\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\n  */\n\n$(cat ${{ github.workspace }}/dist/worker.js)" > ${{ github.workspace }}/dist/worker.js
+      run: cp ${{ github.workspace }}/dist/worker.js ${{ github.workspace }}/dist/worker-original.js && echo -e "/*!\n  * v2ray Subscription Worker (${{ github.sha }})\n  * Copyright 2024 Vahid Farid (https://twitter.com/vahidfarid)\n  * Licensed under GPLv3 (https://github.com/vfarid/v2ray-worker/blob/main/Licence.md)\n  */\n\n$(cat ${{ github.workspace }}/dist/worker.js)" > ${{ github.workspace }}/dist/worker.js
 
     - name: Deploy
-      run: |
-        sed -i s/KV_NAME/${{ secrets.KV_NAME }}/g wrangler.toml
-        wrangler publish --api-token ${{ secrets.CF_API_TOKEN }}
-
+      run: sed -i s/KV_NAME/${{ secrets.KV_NAME }}/g wrangler.toml
+      with:
+        apiToken: ${{ secrets.CF_API_TOKEN }}
+        accountId: ${{ secrets.CF_ACCOUNT_ID }}
